--- a/nba.index.html
+++ b/nba.index.html
@@ -12,9 +12,10 @@
 		<header class="quiz-title">
 			<p class="title">NBA Quiz</p>
 		</header>
-		<!--<div class="question-number">
-			<p>Question 1</p>
-		</div>-->
+		<h1 class="progress">Progress:</h1>
+		<div class="Percentage">
+			<p class="grade">50%</p>
+		</div>	
 		<div class="question">
 			<p>Who holds the all-time scoring record in the NBA?</p>
 		</div>
@@ -25,7 +26,7 @@
 			<a href="#" class="button">D. Brian Scalabrine<i class="icon-chevron-right"></i></a>
 		</div>
 		<footer>
-			<ul class="progress">
+			<ul class="question-number">
 				<li>7</li>
 				<li>6</li>
 				<li>5</li>
