--- a/nba.index.html
+++ b/nba.index.html
@@ -12,28 +12,32 @@
 		<header class="quiz-title">
 			<p class="title">NBA Quiz</p>
 		</header>
-		<h1 class="progress">Progress:</h1>
-		<div class="Percentage">
-			<p class="grade">50%</p>
+		<div class="container-progress">
+			<h1 class="progress">Progress:</h1>
+			<div class="Percentage">
+				<p class="grade">50%</p>
+			</div>	
+		</div>
+		<div class="container-questions">	
+			<div class="question">
+				<p>Who holds the all-time scoring record in the NBA?</p>
+			</div>
+			<div class="answer-choices">
+				<a href="#" class="button">A. Wilt Chamberlain<i class="icon-chevron-right"></i></a>
+				<a href="#" class="button">B. Michael Jordan<i class="icon-chevron-right"></i></a>
+				<a href="#" class="button">C. Kareem Abdul-Jabar<i class="icon-chevron-right"></i></a>
+				<a href="#" class="button">D. Brian Scalabrine<i class="icon-chevron-right"></i></a>
+			</div>
 		</div>	
-		<div class="question">
-			<p>Who holds the all-time scoring record in the NBA?</p>
-		</div>
-		<div class="answer-choices">
-			<a href="#" class="button">A. Wilt Chamberlain<i class="icon-chevron-right"></i></a>
-			<a href="#" class="button">B. Michael Jordan<i class="icon-chevron-right"></i></a>
-			<a href="#" class="button">C. Kareem Abdul-Jabar<i class="icon-chevron-right"></i></a>
-			<a href="#" class="button">D. Brian Scalabrine<i class="icon-chevron-right"></i></a>
-		</div>
 		<footer>
 			<ul class="question-number">
-				<li>7</li>
-				<li>6</li>
-				<li>5</li>
-				<li>4</li>
-				<li>3</li>
-				<li>2</li>
 				<li>1</li>
+				<li>2</li>
+				<li>3</li>
+				<li>4</li>
+				<li>5</li>
+				<li>6</li>
+				<li>7</li>
 			</ul>	
 		</footer>
 	</div>
