--- a/nba.index.html
+++ b/nba.index.html
@@ -8,6 +8,9 @@
 	<script src="nba.js"></script>
 </head>
 <body>
+	<div class="landing">
+		
+	</div>
 	<div class="main">
 		<header class="quiz-title">
 			<p class="title">NBA Quiz</p>
@@ -40,5 +43,8 @@
 				<li>7</li>
 			</ul>	
 		</footer>
+	</div>
+	<div class="final hidden">
+		
 	</div>
 </body>
